# obj_vec3_height_array_parser

./: .gitignore  CMakeLists.txt  Face.h  Vertice.h  height_array.cpp  height_array.h  main.cpp
intersection/: FindIntersectionPoint.cpp  FindIntersectionPoint.h  Point3D.h  Triangle.h
model/: Face.cpp  Face.h  Vertice.cpp  Vertice.h
